feat: BN: historical address-book roster model + bootstrap (#3070)
Signed-off-by: berryware <231598+berryware@users.noreply.github.com>